# Lobotomy-Retail-System

./: .env.example  .gitignore  README.md  apikey.txt  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  create_tables.sql  database.py  main.py  test_api.py
backend/app/models/: __init__.py  customer.py  product.py  supplier.py  supplier_order.py  user.py
backend/app/routers/: admin.py  auth.py  customer_orders.py  customers.py  employees.py  payments.py  products.py  supplier.py  supplier_orders.py  users.py
backend/app/schemas/: customer.py  customer_order.py  payment.py  product.py  settings.py  supplier.py  supplier_order.py  user.py
backend/app/services/: __init__.py  customer_order_service.py  payment_service.py  supplier_order_service.py  supplier_service.py
backend/app/utils/: auth.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/admin/: layout.tsx  page.tsx
frontend/app/admin/customers/: page.tsx
frontend/app/admin/dashboard/: page.tsx
frontend/app/admin/inventory/: page.tsx
frontend/app/admin/login/: page.tsx
frontend/app/admin/orders/: page.tsx
frontend/app/admin/settings/: page.tsx
frontend/app/customer/: layout.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/ui/: dialog.tsx
frontend/lib/: auth.ts  stock-status.ts
frontend/lib/api/: checkout.ts  customer-orders.ts  customers.ts  employees.ts  payments.ts  products.ts  settings.ts  supplier-orders.ts  supplier.ts
(+48 files in other folders)
