[project]
name = "backend"
version = "0.1.0"
description = "Lobotomy Retail System - Backend API using raw SQL with pymysql"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.0.1",
    "cryptography==41.0.7",
    "fastapi==0.109.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.5.3",
    "pymysql==1.1.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "uvicorn[standard]==0.27.0",
]
